Update to latest API
