# src/api/swagger.yaml
@@ -277,7 +277,7 @@ paths:
           format: uuid
           required: true
       responses:
-        200:
+        202:
           description: Success.
           schema:
             $ref: '#/definitions/cluster'
@@ -678,6 +678,9 @@ definitions:
       hardware_info:
         x-go-custom-tag: gorm:"type:text"
         type: string
+      inventory:
+        x-go-custom-tag: gorm:"type:text"
+        type: string
       role:
         type: string
         enum: ['undefined', 'master', 'worker']
@@ -780,7 +783,7 @@ definitions:
         description: Name of the OpenShift cluster.
       openshift_version:
         type: string
-        enum: ['4.4']
+        enum: ['4.4', '4.5']
         description: Version of the OpenShift cluster.
       base_dns_domain:
         type: string
@@ -814,16 +817,16 @@ definitions:
         pattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$'
       api_vip:
         type: string
-        format: hostname
+        format: ipv4
         description: Virtual IP used to reach the OpenShift cluster API.
       dns_vip:
         type: string
-        format: hostname
+        format: ipv4
         description:
           Virtual IP used internally by the cluster for automating internal DNS requirements.
       ingress_vip:
         type: string
-        format: hostname
+        format: ipv4
         description: Virtual IP used for cluster ingress traffic.
       pull_secret:
         type: string
@@ -872,16 +875,16 @@ definitions:
         pattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$'
       api_vip:
         type: string
-        format: hostname
+        format: ipv4
         description: Virtual IP used to reach the OpenShift cluster API.
       dns_vip:
         type: string
-        format: hostname
+        format: ipv4
         description:
           Virtual IP used internally by the cluster for automating internal DNS requirements.
       ingress_vip:
         type: string
-        format: hostname
+        format: ipv4
         description: Virtual IP used for cluster ingress traffic.
       pull_secret:
         type: string
@@ -933,7 +936,7 @@ definitions:
         description: Name of the OpenShift cluster.
       openshift_version:
         type: string
-        enum: ['4.4']
+        enum: ['4.4', '4.5']
         description: Version of the OpenShift cluster.
       base_dns_domain:
         type: string
@@ -967,16 +970,16 @@ definitions:
         pattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$'
       api_vip:
         type: string
-        format: hostname
+        format: ipv4
         description: Virtual IP used to reach the OpenShift cluster API.
       dns_vip:
         type: string
-        format: hostname
+        format: ipv4
         description:
           Virtual IP used internally by the cluster for automating internal DNS requirements.
       ingress_vip:
         type: string
-        format: hostname
+        format: ipv4
         description: Virtual IP used for cluster ingress traffic.
       pull_secret:
         type: string
